# songos

./: .gitignore  LICENSE  PARSER_SPEC.md  PROJECT_STATUS.md  README.md  analyzer.py  cli.py  config.py  db.py  ingest.py  parser.py  pyproject.toml  reporter.py  requirements.txt  test_schema.py
docs/: roadmap.md
examples/: demo_report.md
