[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "songos"
version = "0.1.0"
description = "Behavior discovery from personal notes — not another knowledge manager."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "PyYAML>=6.0",
]

[project.scripts]
songos = "cli:app"
